@@ -2,7 +2,7 @@ echo on
 goto 3
 print *
 browse 1
-set format raw_pretty
+set format pretty
 set depth 10
 ls
 set width 131
@@ -14,7 +14,7 @@ ls
 set width 79
 set depth 3
 ls
-set format pretty
+set format raw_pretty
 set lines 4
 set width 40
 ls
