@@ -5,13 +5,13 @@ mdb> register --quiet
 mdb> break big_data
  0: + stop  interface pred browser_test.big_data/1-0 (det)
 mdb> continue
-      E2:     C2  2 CALL pred browser_test.big_data/1-0 (det) browser_test.m:34 (browser_test.m:20)
+      E2:     C2  2 CALL pred browser_test.big_data/1-0 (det) browser_test.m:37 (browser_test.m:20)
 mdb> finish
-      E3:     C2  2 EXIT pred browser_test.big_data/1-0 (det) browser_test.m:34 (browser_test.m:20)
+      E3:     C2  2 EXIT pred browser_test.big_data/1-0 (det) browser_test.m:37 (browser_test.m:20)
 mdb> delete *
  0: E stop  interface pred browser_test.big_data/1-0 (det)
 mdb> save_to_file 1 browser_test.save.1
-mdb> set format pretty
+mdb> set format raw_pretty
 mdb> print *
        Data (arg 1)           	
 big(big(big(small, 1, small), 2, small), 3, big(big(small, 4, big/3), 6, small))
@@ -32,7 +32,7 @@ big(
 mdb> set -AP format flat
 mdb> print -f 1
        Data (arg 1)           	big(big(big(small, 1, small), 2, small), 3, big(big(small, 4, big/3), 6, small))
-mdb> print -r 1
+mdb> print -p 1
        Data (arg 1)           	
 big(big(big(...), ...), 3, ...)
 mdb> print -v 1
@@ -54,7 +54,7 @@ big
   2-6
   3-small
 
-mdb> print -p 1
+mdb> print -r 1
        Data (arg 1)           	
 big(
   big(big(small, 1, small), 2, small), 
@@ -119,15 +119,17 @@ mdb> print Data/1/2
 mdb> print 1^1^2^3
 mdb: the path 3 does not exist.
 mdb> retry
-      E2:     C2  2 CALL pred browser_test.big_data/1-0 (det) browser_test.m:34 (browser_test.m:20)
+      E2:     C2  2 CALL pred browser_test.big_data/1-0 (det) browser_test.m:37 (browser_test.m:20)
 mdb> break list_data
  0: + stop  interface pred browser_test.list_data/1-0 (det)
 mdb> continue
 big(big(big(small, 1, small), 2, small), 3, big(big(small, 4, big(small, 5, small)), 6, small)).
-      E4:     C3  2 CALL pred browser_test.list_data/1-0 (det) browser_test.m:63 (browser_test.m:23)
+      E4:     C3  2 CALL pred browser_test.list_data/1-0 (det) browser_test.m:66 (browser_test.m:23)
 mdb> finish
-      E5:     C3  2 EXIT pred browser_test.list_data/1-0 (det) browser_test.m:63 (browser_test.m:23)
+      E5:     C3  2 EXIT pred browser_test.list_data/1-0 (det) browser_test.m:66 (browser_test.m:23)
 mdb> save_to_file Data browser_test.save.2
+mdb> break a_func
+ 1: + stop  interface func browser_test.a_func/1-0 (det)
 mdb> continue
 seq(1, [big(big(small, 1, small), 2, small), small, big(small, 4, big(small, 5, small))], 5).
 browser_test.save.1:
@@ -184,3 +186,45 @@ seq(
  5
 )
 
+      E6:     C4  2 CALL func browser_test.a_func/1-0 (det) browser_test.m:112 (browser_test.m:31)
+mdb> finish
+      E7:     C4  2 EXIT func browser_test.a_func/1-0 (det) browser_test.m:112 (browser_test.m:31)
+mdb> print -p
+a_func(big(big(...), ...)) = big(big(...), ...)
+mdb> print -r
+a_func(
+  big(
+    big(big(small, 1, small), 2, small), 
+    3, 
+    big(big(small, 4, big(small, 5, small)), 6, small)))
+ = big(
+    big(big(small, 1, small), 2, small), 
+    3, 
+    big(big(small, 4, big(small, 5, small)), 6, small))
+mdb> print -v
+a_func
+1-big
+| 1-big
+| | 1-big/3
+| | 2-2
+| | 3-small
+| 2-3
+| 3-big
+|   1-big/3
+|   2-6
+|   3-small
+2-big
+  1-big
+  | 1-big/3
+  | 2-2
+  | 3-small
+  2-3
+  3-big
+    1-big/3
+    2-6
+    3-small
+
+mdb> print -f
+a_func(big(big(big/3, 2, small), 3, big(big/3, 6, small))) = big(big(big/3, 2, small), 3, big(big/3, 6, small))
+mdb> continue
+big(big(big(small, 1, small), 2, small), 3, big(big(small, 4, big(small, 5, small)), 6, small))
