@@ -8,6 +8,7 @@ mdb> continue
        2:      2  2 CALL pred browse_arg.p/2-0 (det) browse_arg.m:19 (browse_arg.m:8)
 mdb> finish
        3:      2  2 EXIT pred browse_arg.p/2-0 (det) browse_arg.m:19 (browse_arg.m:8)
+mdb> set depth 10
 mdb> dd
 p(1, baz(1, bar))
 Valid? browse 2
